--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-Hello World
+<html>
+<head>
+<title>Harry Potter</title>
+<link rel="stylesheet" href="style.css">
+<script type="text/javascript" id="cookiebanner" src="https://cdn.jsdelivr.net/gh/dobarkod/cookie-banner@1.2.2/dist/cookiebanner.min.js"></script>
+
+</head>    
+
+<body>
+    
+<h1>Sito web per partecipare all'esame -- Reti di calcolatori</h1>
+<h2>Studente: Giovanni de Maria</h2>
+<h2>Main page: Harry Potter</h2>
+
+<h3>Altre pagine:</h3>
+<a href="hermione.html">Hermione</a>
+<a href="ron.html">Ron</a>
+
+<p>Harry Potter &egrave; un simpatico maghetto.</p>
+<p><img src="https://static.wikia.nocookie.net/harrypotter/images/5/52/Harry_Potter_%28HBP_promo%29_1.jpg"  /></p>
+<p>Prima immagine (prelevata da web con url assoluto).</p>
+<p><img src="harry_local.jpg" /></p>
+<p>Seconda immagine (in locale con url relativo)</p>
+
+</body>
+</html>
