--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 <h2>Main page: Harry Potter</h2>
 
 <h3>Altre pagine:</h3>
-<a href="hermione.html">Hermione</a>
-<a href="ron.html">Ron</a>
-
+<ul>
+    <li><a href="hermione.html">Hermione</a></li>
+    <li><a href="ron.html">Ron</a></li>
+</ul>
 <p>Harry Potter &egrave; un simpatico maghetto.</p>
 <p><img src="https://static.wikia.nocookie.net/harrypotter/images/5/52/Harry_Potter_%28HBP_promo%29_1.jpg"  /></p>
 <p>Prima immagine (prelevata da web con url assoluto).</p>
