--- a/index.html
+++ b/index.html
@@ -1,27 +1,42 @@
 <html>
 <head>
 <title>Harry Potter</title>
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&family=Oswald&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
+
 <script type="text/javascript" id="cookiebanner" src="https://cdn.jsdelivr.net/gh/dobarkod/cookie-banner@1.2.2/dist/cookiebanner.min.js"></script>
 
 </head>    
 
 <body>
     
-<h1>Sito web per partecipare all'esame -- Reti di calcolatori</h1>
-<h2>Studente: Giovanni de Maria</h2>
-<h2>Main page: Harry Potter</h2>
+<h1 style="text-align: center">Sito web per partecipare all'esame -- Reti di calcolatori</h1>
+<h2 style="text-align: center">Giovanni de Maria</h2>
+<h2>Harry Potter</h2>
 
 <h3>Altre pagine:</h3>
 <ul>
     <li><a href="hermione.html">Hermione</a></li>
     <li><a href="ron.html">Ron</a></li>
 </ul>
-<p>Harry Potter &egrave; un simpatico maghetto.</p>
-<p><img src="https://static.wikia.nocookie.net/harrypotter/images/5/52/Harry_Potter_%28HBP_promo%29_1.jpg"  /></p>
-<p>Prima immagine (prelevata da web con url assoluto).</p>
-<p><img src="harry_local.jpg" /></p>
-<p>Seconda immagine (in locale con url relativo)</p>
+<p>Harry Potter &egrave; un mago molto famoso perché è l'unico sopravvissuto all'incantesimo <i>"Avada Kedavra"</i>, ossia l'incantesimo che uccide. Gli è rimasta solo una cicatrice sulla fronte.</p>
+
+<table>
+    <tr>
+        <td><img src="https://static.wikia.nocookie.net/harrypotter/images/5/52/Harry_Potter_%28HBP_promo%29_1.jpg"  /></td> <!-- td= Table data-->
+        <td><img src="harry_local.jpg" /></td>
+    </tr>
+
+    <tr>
+        <td> 1^ immagine <br>(prelevata da web con url assoluto)</td>
+        <td> 2^ immagine <br>(in locale con url relativo)</td>
+    </tr>
+
+</table>
+
 
 </body>
 </html>
