--- a/ron.html
+++ b/ron.html
@@ -2,25 +2,40 @@
 <head>
 <title>Ron</title>
 <link rel="stylesheet" href="style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&family=Oswald&display=swap" rel="stylesheet">
 <script type="text/javascript" id="cookiebanner" src="https://cdn.jsdelivr.net/gh/dobarkod/cookie-banner@1.2.2/dist/cookiebanner.min.js"></script>
 
 </head>    
 
 <body>
     
-<h1>Sito web per partecipare all'esame -- Reti di calcolatori</h1>
-<h2>Studente: Giovanni de Maria</h2>
+<h1 style="text-align: center">Sito web per partecipare all'esame -- Reti di calcolatori</h1>
+<h2 style="text-align: center">Giovanni de Maria</h2>
 <h2>Ron</h2>
 
 <h3>Altre pagine:</h3>
-<a href="index.html">Harry Potter</a>
-<a href="hermione.html">Hermione</a>
+<ul>
+    <li><a href="hermione.html">Hermione</a></li>
+    <li><a href="index.html">Harry Potter</a></li>
+</ul>
 
-<p>Ron &egrave; un maghetto povero.</p>
-<p><img src="https://www.potterpedia.it/imagewatermark/immagini/1003-Ron_Weasley_poster.jpg"  /></p>
-<p>Prima immagine (prelevata da web con url assoluto).</p>
-<p><img src="ron_local.jpg" /></p>
-<p>Seconda immagine (in locale con url relativo)</p>
+<p>&Egrave; il miglior amico di Harry Potter. Proviene dalla famiglia <b>Weasley</b> che &egrave; vista malamente dal resto della comunit&agrave; dei maghi perch&eacute; trattengono rapporti con i <b>babbani</b>.&nbsp;</p>
+
+<table>
+    <tr>
+        <td><img src="https://www.potterpedia.it/imagewatermark/immagini/1003-Ron_Weasley_poster.jpg"  /></td> <!-- td= Table data-->
+        <td><img src="ron_local.jpg" /></td>
+    </tr>
+
+    <tr>
+        <td> 1^ immagine <br>(prelevata da web con url assoluto)</td>
+        <td> 2^ immagine <br>(in locale con url relativo)</td>
+    </tr>
+
+</table>
+
 
 
 </body>
