--- a/hermione.html
+++ b/hermione.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Hermione</title>
-<link rel="stylesheet" href="style2.css">
+<link rel="stylesheet" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&family=Oswald&display=swap" rel="stylesheet">
