--- a/esame_RetiC/index.html
+++ b/esame_RetiC/index.html
@@ -13,8 +13,8 @@
 
 <body>
     
-<h1 class="testata">Sito web per partecipare all'esame -- Reti di calcolatori</h1>
-<h2 class="testata">Giovanni de Maria</h2>
+<h1 style="text-align: center">Sito web per partecipare all'esame -- Reti di calcolatori</h1>
+<h2 style="text-align: center">Giovanni de Maria</h2>
 <h2>Harry Potter</h2>
 
 <h3>Altre pagine:</h3>
