--- a/esame_RetiC/hermione.html
+++ b/esame_RetiC/hermione.html
@@ -25,7 +25,7 @@
 <p>&Egrave; la ragazza che completa il trio con Ron Weasley e Harry Potter.</p>
 
 <blockquote>
-    "&Egrave; leviosa non leviosà"
+    "&Egrave; levi&oacute;sa non levios&agrave;"
 </blockquote>
     
 
