--- a/esame_RetiC/index.html
+++ b/esame_RetiC/index.html
@@ -30,11 +30,13 @@
             <li><a href="hermione.html">Hermione</a></li>
             <li><a href="ron.html">Ron</a></li>
         </ul>
+
         <p>Harry Potter &egrave; un mago molto famoso perché è l'unico sopravvissuto all'incantesimo <i>"Avada Kedavra"</i>, ossia l'incantesimo che uccide. Gli è rimasta solo una cicatrice sulla fronte.</p>
 
         <table>
+
             <tr>
-                <td><img src="https://static.wikia.nocookie.net/harrypotter/images/5/52/Harry_Potter_%28HBP_promo%29_1.jpg"  /></td> <!-- td= Table data-->
+                <td><img src="https://static.wikia.nocookie.net/harrypotter/images/5/52/Harry_Potter_%28HBP_promo%29_1.jpg"  /></td>
                 <td><img src="harry_local.jpg" /></td>
             </tr>
 
@@ -44,7 +46,6 @@
             </tr>
 
         </table>
-
 
     </body>
 </html>
