--- a/esame_RetiC/ron.html
+++ b/esame_RetiC/ron.html
@@ -34,8 +34,9 @@
         <p>&Egrave; il miglior amico di Harry Potter. Proviene dalla famiglia <b>Weasley</b> che &egrave; vista malamente dal resto della comunit&agrave; dei maghi perch&eacute; trattengono rapporti con i <b>babbani</b>.&nbsp;</p>
 
         <table>
+
             <tr>
-                <td><img src="https://www.potterpedia.it/imagewatermark/immagini/1003-Ron_Weasley_poster.jpg"  /></td> <!-- td= Table data-->
+                <td><img src="https://www.potterpedia.it/imagewatermark/immagini/1003-Ron_Weasley_poster.jpg"  /></td>
                 <td><img src="ron_local.jpg" /></td>
             </tr>
 
