--- a/esame_RetiC/index.html
+++ b/esame_RetiC/index.html
@@ -26,6 +26,7 @@
         <h2>Harry Potter</h2>
 
         <h3>Altre pagine:</h3>
+        <nav>
         <ul>
             <li><a href="hermione.html">Hermione</a></li>
             <li><a href="ron.html">Ron</a></li>
