Aggiunto indirizzo email (è richiesto: Almeno un elemento di una pagina deve però avere uno stile ridefinito rispetto al file CSS)

--- a/esame_RetiC/index.html
+++ b/esame_RetiC/index.html
@@ -11,7 +11,7 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&family=Oswald&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&family=Oswald&Noto+Sans+Mono&display=swap" rel="stylesheet">
 
         <!-- COOKIE BANNER-->
 
@@ -23,6 +23,7 @@
         
         <h1 style="text-align: center">Sito web per partecipare all'esame -- Reti di calcolatori</h1>
         <h2 style="text-align: center">Giovanni de Maria</h2>
+        <h2 style="text-align: center; font-family: 'Noto Sans Mono', monospace"><a href="mailto:giovanni.demaria@studenti.units.it">giovanni.demaria@studenti.units.it</a></h2>
         <h2>Harry Potter</h2>
 
         <h3>Altre pagine:</h3>
