--- a/esame_RetiC/ron.html
+++ b/esame_RetiC/ron.html
@@ -32,7 +32,7 @@
             <li><a href="index.html">Harry Potter</a></li>
         </ul>
 
-        <p>&Egrave; il miglior amico di Harry Potter. Proviene dalla famiglia <b>Weasley</b> che &egrave; vista malamente dal resto della comunit&agrave; dei maghi perch&eacute; trattengono rapporti con i <b>babbani</b>.&nbsp;</p>
+        <p>&Egrave; il miglior amico di Harry Potter. Proviene dalla famiglia <b>Weasley</b> che &egrave; vista malamente dal resto della comunit&agrave; dei maghi perch&eacute; trattiene rapporti con i <b>babbani</b>.&nbsp;</p>
 
         <table>
 
