redirect to de-maria.eu

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello World. This is the root of giovannidemaria.github.io.
+
+<html><head>
+<meta http-equiv="refresh" content="5;URL=https://www.de-maria.eu/">
+  </head>
+  <body>
+    <p>Redirecting you to https://www.de-maria.eu/</p>
+  </body>
+</html>
