--- a/advprog.html
+++ b/advprog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Advanced Programming</title>
+<title>Advanced Programming ToC</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 
 <style>
